<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/p_dark"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        layout="@layout/calc_result"
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:layout_margin="1dp" />

    <LinearLayout
        android:id="@+id/first_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/plus_button"
            style="@style/CalcFormButton"
            android:text="@string/button_plus" />

        <Button
            android:id="@+id/minus_button"
            style="@style/CalcFormButton"
            android:text="@string/button_minus" />

        <Button
            android:id="@+id/multiply_button"
            style="@style/CalcFormButton"
            android:text="@string/button_mult" />

        <Button
            android:id="@+id/division_button"
            style="@style/CalcFormButton"
            android:text="@string/button_div" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven_button"
            style="@style/CalcFormButton"
            android:text="@string/button_seven" />

        <Button
            android:id="@+id/eigth_button"
            style="@style/CalcFormButton"
            android:text="@string/button_eight" />

        <Button
            android:id="@+id/nine_button"
            style="@style/CalcFormButton"
            android:text="@string/button_nine" />

        <Button
            android:id="@+id/igual_button"
            style="@style/CalcFormButton"
            android:text="@string/button_equals" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/line_one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/four_button"
                style="@style/CalcFormLine"
                android:text="@string/button_four" />

            <Button
                android:id="@+id/one_button"
                style="@style/CalcFormLine"
                android:text="@string/button_one" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/five_button"
                style="@style/CalcFormLine"
                android:text="@string/button_five" />

            <Button
                android:id="@+id/two_button"
                style="@style/CalcFormLine"
                android:text="@string/button_two" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/six_button"
                style="@style/CalcFormButton"
                android:text="@string/button_six" />

            <Button
                android:id="@+id/three_button"
                style="@style/CalcFormLine"
                android:text="@string/button_three" />
        </LinearLayout>

        <Button
            android:id="@+id/zero_button"
            style="@style/CalcFormButtonZero"
            android:text="@string/button_zero" />
    </LinearLayout>

</LinearLayout>
